# projet-vera-consultations-

./: .gitignore  AMELIORATIONS_FUTURES.md  ANCRE Formal Section v7.4 — ~_s justification, DeepSeek refutation  ANCRE_Mironov_Clarification.md  ANCRE_Whitepaper_v1_EN.md  CHANGELOG.md  Cargo.toml  DECISIONS.md  LIMITS.md  METHODOLOGY.md  README.md  README_VERA.md  SECURITY.md  Section1_Context.md  Section2_Architecture.md  Section5_Limits.md  VERA_ATTACK_SURFACE_ANALYSIS.md  VERA_AUDIT_REFERENCE.md  VERA_CHALLENGE_REGISTER.md  VERA_Cross_Dataset_Validation.md  VERA_DELL_TODO.md  VERA_MODEL_A_PLUS_CCS_GRADE.md  VERA_PAPER_DRAFT_v09.md  VERA_PAPER_v10.md  VERA_THREAT_MODEL_COMPLETE.md  VERA_V2_RUST_IMPLEMENTATION.rs  VERA_V2_SECURITY_CONSIDERATIONS.md  VERA_V2_SECURITY_PROOF.md  VERA_Validation_Stats.md  VERA_WHITEPAPER_FINAL.md  VERA_Whitepaper_v2_FINAL.md  ancre_patch_v0.2.py  ancre_patch_v02.py  ancre_pipeline.py  ancre_tests.py  ancre_tests_v0.2.py  ancre_verify.py  anomaly_detection.py  build.sh  compare_radio_lastfm.py  (+47 more)
VERA-Pulse/: build.gradle  gradlew
VERA-Route-Local/: README.md
ancre-rust-v04/: main.rs
archive/VERA-Route-Local/: Cargo.toml
archive/VERA-Route-Local/src/: fallback.rs  inference.rs  lib.rs  metrics.rs  tee_hooks.rs
archive/VERA-Route-Local/tests/: integration.rs
archive/vera_radio_era/vera-radio/: Cargo.toml
archive/vera_radio_era/vera-radio/src/: adapter_spine.rs  lib.rs  pipeline.rs
archive/vera_radio_era/vera-radio/src/analysis/: energy.rs  mean.rs
archive/vera_radio_era/vera-radio/src/capture/: fm.rs  mod.rs
static/: admin.html  (+2 more)
(+211 files in other folders)
