[package]
name = "vera-route-local"
version = "1.0.0"
edition = "2021"

[dependencies]
ort = { version = "2.1", features = ["load-dynamic"] }
ndarray = "0.15"
memmap2 = "0.9"
hdrhistogram = "7.5"
sha2 = "0.10"
ed25519-dalek = "2.1"
zeroize = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.21"
regex = "1.10"
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.0"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
