[package]
name = "vera-radio"
version = "0.1.0"
edition = "2021"

[dependencies]
vera-spine = { path = "../vera-sib/spine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1"
ureq = { version = "2", features = ["native-tls"] }
symphonia = { version = "0.5", features = ["aac"] }

[dev-dependencies]
proptest = "1"
